Bugfix: fixed the overflow of dropdown panels in tabbed action lists

--- a/cocktail/ui/resources/styles/cocktail-ui-tabbedactionlist.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-tabbedactionlist.scss
@@ -4,6 +4,7 @@
 :host {
     border: $panel-border;
     background: $panel-background;
+    overflow: visible;
     --action-list-button-padding: 0.5em 0.7em;
     --action-list-icon-width: 1.2em;
 }
@@ -21,5 +22,6 @@
 
 #content {
     background: none;
+    overflow: visible;
 }
 
